...
    <GradientBackground>
      <StatusBar style="dark" />
      <SafeAreaView style={styles.container} edges={edges}>
        {withLogo && (
          <View style={styles.logoHeader}>
            <Logo size={54} />
            <Text style={styles.brandingText}>BLUPRNT.AI</Text>
          </View>
        )}
        {wrappedContent}
      </SafeAreaView>
    </GradientBackground>
  );
...
