...
                    label="Create New Project"
                    shortcut="N"
                    onSelect={() => runCommand(() => navigate("/onboarding"))}
                  />
                  <Item
                    icon={<Settings />}
                    label="Account Settings"
                    shortcut="S"
                    onSelect={() => runCommand(() => navigate("/settings"))}
                  />
                </Command.Group>

                <Command.Group
...
